fixed input values position on firefox browser

--- a/src/components/Main/parcelValues.scss
+++ b/src/components/Main/parcelValues.scss
@@ -94,6 +94,7 @@ $fontSize: 1.3rem;
             border: none;
             border-radius: 0px;
             padding-left: $gridGap;
+            width: auto;
         }
         p {
             height: 2rem;
